base/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 30
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - image: naveenkumarsp/gitops-argocd-demo:3ca4c02bef8177505105357a5434fe67a9277aaf
        name: demo
        ports:
        - containerPort: 8080
